# audio-board

./: .gitmodules  .woodpecker.yml  CMakeLists.txt  README.md
board/: CMakeLists.txt
board/audioboard_v1/: CMakeLists.txt  halm.config  memory.ld
board/audioboard_v1/applications/active/: board.c  board.h  main.c  tasks.c  tasks.h
board/audioboard_v1/applications/passive/: main.c
board/audioboard_v1/shared/: board_shared.c  board_shared.h  controls.h
board/audioboard_v1/tests/blinking_led/: main.c
board/audioboard_v1/tests/load/: main.c
board/audioboard_v1/tests/slave/: main.c
board/audioboard_v1/tests/terminal/: codec.c  codec.h  main.c
board/audioboard_v1/tests/wakeup/: main.c
board/v1/applications/active/: board.c  board.h  main.c  tasks.c  tasks.h
board/v1/applications/passive/: main.c
board/v1/shared/: board_shared.c  board_shared.h  controls.h
board/v1/tests/blinking_led/: main.c
board/v1/tests/load/: main.c
board/v1/tests/slave/: main.c
board/v1/tests/terminal/: codec.c  codec.h  main.c
board/v1/tests/wakeup/: main.c
cmake/: GetGitInfo.cmake
core/: CMakeLists.txt  settings.c  settings.h  slave.h
